[package]
name = "getmessages_ms"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.19.0"
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
redis = "0.23.0"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
rand = { version = "0.8.4", features = ["std"] }
secp256k1 = {version="0.27.0", features=["global-context"]}
hex = "0.4.3"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21.0"
native-tls = "0.2.11"
httparse = "1.8.0"
http = "0.2.9"
sha1 = "0.10.5"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
futures-channel = "0.3.28"
nostro2 = "0.1.6"
log = "0.4.20"
env_logger = "0.10.0"
ed25519-dalek ={version = "2.0.0", features = ["pem","pkcs8","rand_core"]}
openssl = "0.10.57"
regex = "1.9.6"
tempfile = "3.8.0"
sha256 = "1.4.0"
chrono = {version = "0.4.31", features = ["clock"]}
