[package]
name = "arrakis_node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/index.rs"

[[bin]]
name = "arrakis_node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
rand = { version = "0.8.4", features = ["std"] }
hex = "0.4.3"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
nostro2 = "0.1.7"
openssl = "0.10.57"
regex = "1.9.6"
sha256 = "1.4.0"
chrono = {version = "0.4.31", features = ["clock"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
